--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,15 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "astrotomic/laravel-translatable": "^11.9",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.65",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-
-        "astrotomic/laravel-translatable": "11.8.*"
+        "spatie/laravel-activitylog": "^3.17",
+        "spatie/laravel-honeypot": "^3.0",
+        "spatie/laravel-schemaless-attributes": "^1.8"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
